calibration grade label alignment fixed

--- a/views/CalibrationForm/CalibrationForm.scss
+++ b/views/CalibrationForm/CalibrationForm.scss
@@ -102,7 +102,7 @@
         .label {
           border-bottom: 2px solid transparent;
           display: block;
-          min-height: 35px;
+          min-height: 50px;
           background-color: #fff;
           opacity: 1 !important;
           padding-bottom: 10px;
